--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 <title>Musica</title>
 <link rel="stylesheet" href="style/entrega1.css">
@@ -77,14 +77,14 @@
         </div>
         <div class="cuerpo_derecha">
             <div class="modal" id="id02">
-                <img src="images/google-icon.png" class="iconos">
-                <img src="images/facebook-icon.png" class="iconos">
+                <img src="images/google-icon.png" alt="google" class="iconos">
+                <img src="images/facebook-icon.png" alt="facebook" class="iconos">
                 <form class="modal-content" method="post" action="#" onsubmit="return validarDatos(this)">
                   <div class="container">
-                    <label for="email">Correo Electrónico</label>
+                    <label id="email">Correo Electrónico</label>
                     <input type="email" placeholder="Introduzca email" name="email" required>
                     <br>
-                    <label for="psw">Contraseña</label>
+                    <label id="psw">Contraseña</label>
                     <input type="password" placeholder="Introduzca contraseña" name="psw" required>
                     <br>
                     <button type="submit" class="btnsubmit">Login</button>
