comentarios de codigo

--- a/cuenta.html
+++ b/cuenta.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="columna_izquierda">
+        <!--Creamos el encabezado de la izquierda, la cual tiene el logo e icono de la aplicación--> 
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
@@ -17,6 +18,7 @@
             </div>
         </div>
         <div class="cuerpo_izquierda">
+        <!-- Creamos el cueerpo izquierdo donde encontramos las listas-->
             <div class="menu">
                 <div class="menu_option" onclick="abrirListasGuardadas()">
                     <div class="icono">
@@ -37,6 +39,7 @@
                 
 
             </div>
+            <!-- Añadimos los distintos enlaces a la política y las cookies-->
             <div class="links">
                 <div class="link">
                     <a href="https://www.spotify.org/" class="Política">Política de privacidad</a>
@@ -55,6 +58,7 @@
     </div>
     <div class="columna_derecha">
         <div class="encabezado_derecha"  >
+        <!--Creamos el encabezado de la derecha, el cual tiene la foto de perfil del usuario y el botón con las opciones--> 
             <div class="encabezado-perfil">
                 <img src="a.jpg" alt="foto perfil" class="fotoperfil" id="fotoperfil">
                 <button class="boton-opciones" onclick="abrirListaOpciones()" id="boton-opciones">Opciones</button>
@@ -79,6 +83,7 @@
             </div>
 
         </div>
+        <!--Creamos el cuerpo de la derecha con los atributos del perfil del usuario--> 
         <div class="cuerpo_derecha">
             <div class="modal" id="mi-perfil">
                 <span onclick="closeFormMiPerfil()" class="close" title="Close Modal">&times;</span>
@@ -111,6 +116,7 @@
             </div>
         </div>
     </div>
+    <!--Creamos el pie de la página--> 
     <div class="pie">
     </div>
 </body>
