--- a/entrega3.html
+++ b/entrega3.html
@@ -9,12 +9,14 @@
 </head>
 <body >
     <div class="columna_izquierda">
+        <!--Creamos el encabezado de la izquierda, la cual tiene el logo e icono de la aplicación--> 
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
                 <h1 ><a href="entrega3.html" >UC3Musica</a></h1>
             </div>
-        </div>
+        </div>´
+        <!-- Creamos el cueerpo izquierdo donde encontramos las listas-->
         <div class="cuerpo_izquierda">
             <div class="menu">
                 <div class="menu_option" onclick="abrirListasGuardadas()">
@@ -35,7 +37,8 @@
                 </div>
                 
 
-            </div>
+            </div>  
+            <!-- Añadimos los distintos enlaces a la política y las cookies-->
             <div class="links">
                 <div class="link">
                     <a href="https://www.spotify.org/" class="Política">Política de privacidad</a>
@@ -53,7 +56,7 @@
         
     </div>
     <div class="columna_derecha">
-
+        <!--Creamos el encabezado de la derecha, el cual tiene la foto de perfil del usuario y el botón con las opciones--> 
         <div class="encabezado_derecha"  >
             <div class="encabezado-perfil">
                 <img src="a.jpg" class="fotoperfil" alt="foto perfil" id="fotoperfil">
@@ -82,6 +85,7 @@
 
 
         <div class="cuerpo_derecha">
+            <!--Creamos el cuerpo de la derecha con lainformación de los artistas y los diferentes enlaces hacia sus perfiles--> 
             <h1 class="tipo_musica">Reggaeton</h1>
             <div class="reggaeton">
                  <div class="imagen">
@@ -204,7 +208,7 @@
         </div>
 
         </div>
-
+    <!--Creamos el pie de la página--> 
     <div class="pie" id="reproductor1">
 
     </div>
