--- a/login.html
+++ b/login.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="columna_izquierda">
+        <!--Creamos el encabezado de la izquierda, la cual tiene el logo e icono de la aplicación--> 
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
                 <h1 ><a href="entrega2.html" >UC3Musica</a></h1>
             </div>
         </div>
+        <!-- Creamos el cuerpo izquierdo donde encontramos las listas-->
         <div class="cuerpo_izquierda">
             <div class="menu">
                 <div class="menu_option">
@@ -51,6 +53,7 @@
                 </div>
 
             </div>
+            <!-- Añadimos los distintos enlaces a la política y las cookies-->
             <div class="links">
                 <div class="link">
                     <a href="https://www.spotify.org/" class="Política">Política de privacidad</a>
@@ -68,13 +71,14 @@
         
     </div>
     <div class="columna_derecha">
-
+        <!--Creamos el encabezado de la derecha, el cual tiene los botones para hacer sign up o log in--> 
         <div class="encabezado_derecha">
             <div class="botones">
                 <a href="login.html" class="boton_1">LOG IN</a>
                 <a href="registrarse.html" class="boton_2">SIGN UP</a>
             </div>
         </div>
+        <!--Creamos el cuerpo de la derecha en el cual se piden el correo y la contraseña para acceder--> 
         <div class="cuerpo_derecha">
             <div class="modal" id="id02">
                 <img src="images/google-icon.png" alt="google" class="iconos">
@@ -93,6 +97,7 @@
             </div> 
         </div>
     </div>
+    <!--Creamos el pie de la página--> 
     <div class="pie">
         <p class="texto_pie">Usa la web que viene bien</p>
     </div>
