--- a/crearListas.html
+++ b/crearListas.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="columna_izquierda">
+        <!--Creamos el encabezado de la izquierda, la cual tiene el logo e icono de la aplicación--> 
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
                 <h1 ><a href="entrega3.html" >UC3Musica</a></h1>
             </div>
         </div>
+        <!-- Creamos el cueerpo izquierdo donde encontramos las listas-->
         <div class="cuerpo_izquierda">
             <div class="menu">
                 <div class="menu_option" onclick="abrirListasGuardadas()">
@@ -36,6 +38,7 @@
                 
 
             </div>
+            <!-- Añadimos los distintos enlaces a la política y las cookies-->
             <div class="links">
                 <div class="link">
                     <a href="https://www.spotify.org/" class="Política">Política de privacidad</a>
@@ -53,6 +56,7 @@
         
     </div>
     <div class="columna_derecha">
+        <!--Creamos el encabezado de la derecha, el cual tiene la foto de perfil del usuario y el botón con las opciones--> 
 
         <div class="encabezado_derecha"  >
             <div class="encabezado-perfil">
@@ -79,6 +83,7 @@
             </div>
 
         </div>
+        <!--Creamos el cuerpo de la derecha con las opciones para crear una lista--> 
         <div class="cuerpo_derecha">
             <div class="modal" id="id01">
                 <form class="modal-content" method="post" action="#" onsubmit="storeSongs(this)">
@@ -102,5 +107,6 @@
               </div>
         </div>
     </div>
+    <!--Creamos el pie de la página--> 
     <div class="pie">
     </div>
