--- a/perfil_artista.html
+++ b/perfil_artista.html
@@ -9,12 +9,14 @@
 </head>
 <body onload="perfil_artista()">
     <div class="columna_izquierda">
+        <!--Creamos el encabezado de la izquierda, la cual tiene el logo e icono de la aplicación--> 
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
                 <h1 ><a href="entrega3.html" >UC3Musica</a></h1>
             </div>
         </div>
+        <!-- Creamos el cuerpo izquierdo donde encontramos las listas-->
         <div class="cuerpo_izquierda">
             <div class="menu">
                 <div class="menu_option">
@@ -51,6 +53,7 @@
                 </div>
 
             </div>
+            <!-- Añadimos los distintos enlaces a la política y las cookies-->
             <div class="links">
                 <div class="link">
                     <a href="https://www.spotify.org/" class="Política">Política de privacidad</a>
@@ -68,7 +71,7 @@
         
     </div>
     <div class="columna_derecha">
-
+        <!--Creamos el encabezado de la derecha, el cual tiene la foto de perfil del usuario el botón con las opciones y el correspondiente buscador--> 
         <div class="encabezado_derecha"  >
             <div class="encabezado-perfil">
                 <img src="a.jpg" alt="foto perfil" class="fotoperfil" id="fotoperfil">
@@ -94,6 +97,7 @@
             </div>
 
         </div>
+        <!--Creamos el cuerpo de la derecha, en el cual se encuentra el artista en el que nos hayamos metido--> 
         <div class="cuerpo_derecha">
             <h1 class="tipo_musica" id="titulo"></h1>
             <div class="reggaeton" id="canciones_cantante">
@@ -101,5 +105,6 @@
             </div>
         </div>
     </div>
+    <!--Creamos el pie de la página--> 
     <div class="pie">
     </div>
